Enhance global styles and layout responsiveness across multiple components. Introduce box-sizing for consistent sizing, adjust overflow properties, and ensure images and videos are responsive. Update layout styles in various pages to utilize max-width for better adaptability on different screen sizes. Implement media queries for filter component to improve mobile usability.

--- a/app/cart/page.module.css
+++ b/app/cart/page.module.css
@@ -23,7 +23,8 @@
 /* Shipping bar */
 .shippingBar {
   margin-bottom: var(--gap-32);
-  max-width: 500px;
+  max-width: 100%;
+  width: 500px;
 }
 .shippingText {
   font-size: var(--fs-16);
@@ -59,6 +60,7 @@
 }
 .summarySide {
   width: 380px;
+  max-width: 100%;
   flex-shrink: 0;
 }
 
