--- a/app/our-story/page.module.css
+++ b/app/our-story/page.module.css
@@ -34,7 +34,8 @@
 }
 .heroContent {
   position: relative;
-  width: 588px;
+  width: 100%;
+  max-width: 588px;
 }
 .heroText {
   display: flex;
