--- a/components/Filter.module.css
+++ b/components/Filter.module.css
@@ -96,3 +96,9 @@
   white-space: nowrap;
   cursor: pointer;
 }
+
+@media (max-width: 768px) {
+  .filter {
+    width: 100%;
+  }
+}
